// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SearchUsers history 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "zIndex": 1,
        },
        false,
      ]
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
              "borderBottomColor": "rgb(216, 216, 216)",
              "flex": 1,
              "shadowColor": "rgb(216, 216, 216)",
              "shadowOffset": Object {
                "height": 0.5,
                "width": 0,
              },
              "shadowOpacity": 0.85,
              "shadowRadius": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "maxHeight": undefined,
            "minHeight": undefined,
            "opacity": undefined,
            "transform": undefined,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "marginHorizontal": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityRole="header"
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 17,
                  "fontWeight": "600",
                }
              }
            >
              jest
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransitionStart={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "rgba(255, 255, 255, 255)",
                        "flex": 1,
                      }
                    }
                  >
                    <RCTScrollView
                      ListHeaderComponent={[Function]}
                      contentContainerStyle={
                        Object {
                          "paddingBottom": 30,
                        }
                      }
                      data={
                        Array [
                          "john",
                          "doe",
                        ]
                      }
                      disableVirtualization={false}
                      getItem={[Function]}
                      getItemCount={[Function]}
                      horizontal={false}
                      initialNumToRender={10}
                      keyExtractor={[Function]}
                      maxToRenderPerBatch={10}
                      onContentSizeChange={[Function]}
                      onEndReachedThreshold={2}
                      onLayout={[Function]}
                      onMomentumScrollEnd={[Function]}
                      onScroll={[Function]}
                      onScrollBeginDrag={[Function]}
                      onScrollEndDrag={[Function]}
                      removeClippedSubviews={true}
                      renderItem={[Function]}
                      scrollEventThrottle={50}
                      stickyHeaderIndices={Array []}
                      updateCellsBatchingPeriod={50}
                      viewabilityConfigCallbackPairs={Array []}
                      windowSize={21}
                    >
                      <View>
                        <View
                          onLayout={[Function]}
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                                Object {
                                  "paddingHorizontal": 16,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <Text
                                allowFontScaling={false}
                                style={
                                  Object {
                                    "color": "rgba(0,0,0,0.87)",
                                    "fontFamily": "Ionicons",
                                    "fontSize": 18,
                                    "fontStyle": "normal",
                                    "fontWeight": "normal",
                                    "marginRight": 8,
                                  }
                                }
                                text="ionicon-md-time"
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "color": "#000000",
                                      "fontFamily": "System",
                                      "fontSize": 17,
                                      "fontWeight": "400",
                                      "letterSpacing": -0.408,
                                      "lineHeight": 22,
                                    },
                                    Array [
                                      Object {
                                        "color": "rgba(0,0,0,0.38)",
                                      },
                                      Object {
                                        "backgroundColor": "transparent",
                                        "fontFamily": "System",
                                        "fontWeight": "600",
                                      },
                                      Object {
                                        "backgroundColor": "transparent",
                                        "color": "rgba(0,0,0,0.87)",
                                        "fontFamily": "System",
                                        "fontWeight": "600",
                                        "marginVertical": 18.46153846153846,
                                      },
                                    ],
                                  ]
                                }
                              >
                                Recent searches
                              </Text>
                            </View>
                            <Text
                              onPress={[Function]}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "transparent",
                                    "color": "#000000",
                                    "fontFamily": "System",
                                    "fontSize": 16,
                                    "fontWeight": "400",
                                    "letterSpacing": -0.32,
                                    "lineHeight": 21,
                                  },
                                  Array [
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                    },
                                    undefined,
                                    Array [
                                      Object {
                                        "backgroundColor": "transparent",
                                        "color": "rgba(0,0,0,0.87)",
                                        "fontFamily": "System",
                                        "fontWeight": "600",
                                        "marginVertical": 18.46153846153846,
                                      },
                                      Object {
                                        "backgroundColor": "transparent",
                                        "color": "rgba(0, 122, 255, 255)",
                                        "fontFamily": "System",
                                        "fontWeight": "700",
                                      },
                                    ],
                                  ],
                                ]
                              }
                            >
                              Clear all
                            </Text>
                          </View>
                        </View>
                        <View
                          onLayout={[Function]}
                          style={null}
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "flex": 1,
                                "height": "100%",
                                "justifyContent": "center",
                                "paddingHorizontal": 16,
                              }
                            }
                            testID="history-item"
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "borderBottomColor": "rgba(229, 229, 234, 255)",
                                  "borderBottomWidth": 1,
                                  "flexDirection": "row",
                                  "height": 50,
                                  "justifyContent": "space-between",
                                }
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "color": "#000000",
                                      "fontFamily": "System",
                                      "fontSize": 17,
                                      "fontWeight": "400",
                                      "letterSpacing": -0.408,
                                      "lineHeight": 22,
                                    },
                                    Array [
                                      Object {
                                        "color": "rgba(0,0,0,0.87)",
                                      },
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                john
                              </Text>
                              <View
                                accessible={true}
                                focusable={true}
                                hitSlop={
                                  Object {
                                    "bottom": 50,
                                    "left": 50,
                                    "right": 50,
                                    "top": 50,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#F5F5F5",
                                    "borderRadius": 10,
                                    "height": 22,
                                    "justifyContent": "center",
                                    "opacity": 1,
                                    "width": 22,
                                  }
                                }
                              >
                                <Text
                                  allowFontScaling={false}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "fontFamily": "Ionicons",
                                      "fontSize": 20,
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    }
                                  }
                                  text="ionicon-ios-close"
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          onLayout={[Function]}
                          style={null}
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "flex": 1,
                                "height": "100%",
                                "justifyContent": "center",
                                "paddingHorizontal": 16,
                              }
                            }
                            testID="history-item"
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "borderBottomColor": "rgba(229, 229, 234, 255)",
                                  "borderBottomWidth": 1,
                                  "flexDirection": "row",
                                  "height": 50,
                                  "justifyContent": "space-between",
                                }
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "color": "#000000",
                                      "fontFamily": "System",
                                      "fontSize": 17,
                                      "fontWeight": "400",
                                      "letterSpacing": -0.408,
                                      "lineHeight": 22,
                                    },
                                    Array [
                                      Object {
                                        "color": "rgba(0,0,0,0.87)",
                                      },
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                doe
                              </Text>
                              <View
                                accessible={true}
                                focusable={true}
                                hitSlop={
                                  Object {
                                    "bottom": 50,
                                    "left": 50,
                                    "right": 50,
                                    "top": 50,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#F5F5F5",
                                    "borderRadius": 10,
                                    "height": 22,
                                    "justifyContent": "center",
                                    "opacity": 1,
                                    "width": 22,
                                  }
                                }
                              >
                                <Text
                                  allowFontScaling={false}
                                  style={
                                    Object {
                                      "color": "rgba(0,0,0,0.87)",
                                      "fontFamily": "Ionicons",
                                      "fontSize": 20,
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    }
                                  }
                                  text="ionicon-ios-close"
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTScrollView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders SearchUsers results 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "zIndex": 1,
        },
        false,
      ]
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
              "borderBottomColor": "rgb(216, 216, 216)",
              "flex": 1,
              "shadowColor": "rgb(216, 216, 216)",
              "shadowOffset": Object {
                "height": 0.5,
                "width": 0,
              },
              "shadowOpacity": 0.85,
              "shadowRadius": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "maxHeight": undefined,
            "minHeight": undefined,
            "opacity": undefined,
            "transform": undefined,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "marginHorizontal": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityRole="header"
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 17,
                  "fontWeight": "600",
                }
              }
            >
              jest
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransitionStart={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "rgba(255, 255, 255, 255)",
                        "flex": 1,
                      }
                    }
                  >
                    <RCTScrollView
                      ListHeaderComponent={[Function]}
                      contentContainerStyle={
                        Object {
                          "paddingBottom": 30,
                        }
                      }
                      data={
                        Array [
                          Object {
                            "comments": Array [
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                            ],
                            "displayName": "Bacary Bruno",
                            "id": 1,
                            "photoURL": "https://avatars1.githubusercontent.com/u/14147533",
                            "posts": Array [
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                            ],
                            "uid": 1,
                          },
                          Object {
                            "comments": Array [
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                            ],
                            "displayName": "Bruno Bodian",
                            "id": 2,
                            "photoURL": null,
                            "posts": Array [
                              undefined,
                              undefined,
                            ],
                            "uid": 2,
                          },
                        ]
                      }
                      disableVirtualization={false}
                      getItem={[Function]}
                      getItemCount={[Function]}
                      horizontal={false}
                      initialNumToRender={10}
                      keyExtractor={[Function]}
                      maxToRenderPerBatch={10}
                      onContentSizeChange={[Function]}
                      onEndReachedThreshold={2}
                      onLayout={[Function]}
                      onMomentumScrollEnd={[Function]}
                      onScroll={[Function]}
                      onScrollBeginDrag={[Function]}
                      onScrollEndDrag={[Function]}
                      removeClippedSubviews={true}
                      renderItem={[Function]}
                      scrollEventThrottle={50}
                      stickyHeaderIndices={Array []}
                      updateCellsBatchingPeriod={50}
                      viewabilityConfigCallbackPairs={Array []}
                      windowSize={21}
                    >
                      <View>
                        <View
                          onLayout={[Function]}
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "transparent",
                                  "color": "#000000",
                                  "fontFamily": "System",
                                  "fontSize": 17,
                                  "fontWeight": "400",
                                  "letterSpacing": -0.408,
                                  "lineHeight": 22,
                                },
                                Array [
                                  Object {
                                    "color": "rgba(0,0,0,0.38)",
                                  },
                                  Object {
                                    "backgroundColor": "transparent",
                                    "fontFamily": "System",
                                    "fontWeight": "600",
                                  },
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "color": "rgba(0,0,0,0.87)",
                                      "fontFamily": "System",
                                      "fontWeight": "600",
                                      "marginVertical": 18.46153846153846,
                                    },
                                    Object {
                                      "paddingHorizontal": 16,
                                    },
                                  ],
                                ],
                              ]
                            }
                          >
                            Results
                          </Text>
                        </View>
                        <View
                          onLayout={[Function]}
                          style={null}
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "paddingVertical": 8,
                                },
                                Object {
                                  "paddingHorizontal": 16,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <View
                                style={
                                  Array [
                                    Object {
                                      "height": 30,
                                      "width": 30,
                                    },
                                    Object {
                                      "height": 40,
                                      "width": 40,
                                    },
                                    Object {
                                      "marginRight": 8,
                                    },
                                  ]
                                }
                              >
                                <Image
                                  source={
                                    Object {
                                      "uri": "https://avatars1.githubusercontent.com/u/14147533",
                                    }
                                  }
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "rgba(0, 122, 255, 255)",
                                      "borderRadius": 1000,
                                      "flex": 1,
                                      "justifyContent": "center",
                                    }
                                  }
                                  testID="image-avatar-https://avatars1.githubusercontent.com/u/14147533"
                                />
                              </View>
                              <View
                                style={
                                  Object {
                                    "justifyContent": "center",
                                  }
                                }
                              >
                                <Text
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "transparent",
                                        "color": "#000000",
                                        "fontFamily": "System",
                                        "fontSize": 17,
                                        "fontWeight": "400",
                                        "letterSpacing": -0.408,
                                        "lineHeight": 22,
                                      },
                                      Array [
                                        Object {
                                          "color": "rgba(0,0,0,0.87)",
                                        },
                                        undefined,
                                        undefined,
                                      ],
                                    ]
                                  }
                                >
                                  Bacary Bruno
                                </Text>
                                <View
                                  style={
                                    Object {
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#000000",
                                          "fontFamily": "System",
                                          "fontSize": 15,
                                          "fontWeight": "400",
                                          "letterSpacing": -0.24,
                                          "lineHeight": 20,
                                        },
                                        Array [
                                          Object {
                                            "color": "rgba(0,0,0,0.38)",
                                          },
                                          undefined,
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    4 posts
                                  </Text>
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#000000",
                                          "fontFamily": "System",
                                          "fontSize": 15,
                                          "fontWeight": "400",
                                          "letterSpacing": -0.24,
                                          "lineHeight": 20,
                                        },
                                        Array [
                                          Object {
                                            "color": "rgba(0,0,0,0.38)",
                                          },
                                          undefined,
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                     • 
                                  </Text>
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#000000",
                                          "fontFamily": "System",
                                          "fontSize": 15,
                                          "fontWeight": "400",
                                          "letterSpacing": -0.24,
                                          "lineHeight": 20,
                                        },
                                        Array [
                                          Object {
                                            "color": "rgba(0,0,0,0.38)",
                                          },
                                          undefined,
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    10 comments
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          onLayout={[Function]}
                          style={null}
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "paddingVertical": 8,
                                },
                                Object {
                                  "paddingHorizontal": 16,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <View
                                style={
                                  Array [
                                    Object {
                                      "height": 30,
                                      "width": 30,
                                    },
                                    Object {
                                      "height": 40,
                                      "width": 40,
                                    },
                                    Object {
                                      "marginRight": 8,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "backgroundColor": "rgba(0, 122, 255, 255)",
                                        "borderRadius": 1000,
                                        "flex": 1,
                                        "justifyContent": "center",
                                      },
                                      undefined,
                                      Object {
                                        "backgroundColor": "#4dd0e1",
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    style={
                                      Object {
                                        "backgroundColor": "transparent",
                                        "color": "rgba(255, 255, 255, 255)",
                                        "fontFamily": "System",
                                        "fontSize": 24,
                                        "fontWeight": "600",
                                      }
                                    }
                                  >
                                    B
                                  </Text>
                                </View>
                              </View>
                              <View
                                style={
                                  Object {
                                    "justifyContent": "center",
                                  }
                                }
                              >
                                <Text
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "transparent",
                                        "color": "#000000",
                                        "fontFamily": "System",
                                        "fontSize": 17,
                                        "fontWeight": "400",
                                        "letterSpacing": -0.408,
                                        "lineHeight": 22,
                                      },
                                      Array [
                                        Object {
                                          "color": "rgba(0,0,0,0.87)",
                                        },
                                        undefined,
                                        undefined,
                                      ],
                                    ]
                                  }
                                >
                                  Bruno Bodian
                                </Text>
                                <View
                                  style={
                                    Object {
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#000000",
                                          "fontFamily": "System",
                                          "fontSize": 15,
                                          "fontWeight": "400",
                                          "letterSpacing": -0.24,
                                          "lineHeight": 20,
                                        },
                                        Array [
                                          Object {
                                            "color": "rgba(0,0,0,0.38)",
                                          },
                                          undefined,
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    2 posts
                                  </Text>
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#000000",
                                          "fontFamily": "System",
                                          "fontSize": 15,
                                          "fontWeight": "400",
                                          "letterSpacing": -0.24,
                                          "lineHeight": 20,
                                        },
                                        Array [
                                          Object {
                                            "color": "rgba(0,0,0,0.38)",
                                          },
                                          undefined,
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                     • 
                                  </Text>
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#000000",
                                          "fontFamily": "System",
                                          "fontSize": 15,
                                          "fontWeight": "400",
                                          "letterSpacing": -0.24,
                                          "lineHeight": 20,
                                        },
                                        Array [
                                          Object {
                                            "color": "rgba(0,0,0,0.38)",
                                          },
                                          undefined,
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    8 comments
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTScrollView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
